implementacion de pipes y boostrap

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,24 @@
-<div>
-    <h3>USO DE PIPES</h3>
-    <label for="">Valor: </label>
-    <input type="text">
-    <p>Resultado: <span></span></p>
-</div>
-<div>
-    <h3>CURRENCY PIPES</h3>
-    <label for="">Valor: </label>
-    <input type="text">
-    <select name="" id="">
-        <option value="" selected>Selecciona el tipo de moneda</option>
-        <option value="">Dolar (USD)</option>
-        <option value="">Euro (EUR)</option>
-        <option value="">Soles (S/)</option>
-    </select>
-    <p>Resultado: <span></span></p>
+<div class="container-sm m-auto mt-5">
+    <div class="text-center row d-flex flex-column border p-4">
+        <h4 class="mb-4">USO DE PIPES</h4>
+        <div class="row d-flex justify-content-center">
+            <label for="txt" class="col-2 mb-4">Valor: </label>
+            <input type="text" id="txt" [(ngModel)]="texto" class="col-5 mb-4">
+        </div>
+        <p class="">Resultado: <span>{{texto | uppercase}}</span></p>
+    </div>
+    <div class="text-center row d-flex flex-column border mt-5 p-4">
+        <h4 class="mb-4">CURRENCY PIPES</h4>
+        <div class="row d-flex justify-content-center">
+            <label for="monto" class="col-2 mb-4">Monto: </label>
+            <input type="number" id="monto" [(ngModel)]="monto" class="col-5 mb-4">
+        </div>
+        <div class="row d-flex justify-content-center mb-4">
+            <select name="" id=""  class="col-5">
+                <option value="">Tipo de moneda</option>
+                <option [value]="item" *ngFor="let item of monedas">{{item}}</option>
+            </select>
+        </div>
+        <p>Su moneda es: {{monto | currency:seleccionado}}</p>
+    </div>
 </div>
